--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "start:watch": "nodemon",
-    "start:prod": "node dist/main.js",
+    "start:debug": "nodemon --config nodemon-debug.json",
+    "build": "tsc -p tsconfig.build.json",
     "build:dev": "NODE_ENV=test node dist/main.js",
-    "build": "NODE_ENV=production node dist/main.js",
-    "prestart:prod": "rm -rf ./dist/ && tsc",
+    "start:prod": "NODE_ENV=production node dist/main.js",
+    "prestart:prod": "rm -rf ./dist/ && npm run build",
     "test:watch": "jest --watch --config=jest.config.js",
     "test": "jest --config=jest.config.js"
   },
@@ -27,7 +28,8 @@
   "dependencies": {
     "config": "^3.0.1",
     "js-yaml": "^3.12.1",
-    "log4js": "^3.0.6"
+    "log4js": "^3.0.6",
+    "tsconfig-paths": "^3.8.0"
   },
   "devDependencies": {
     "@types/config": "0.0.34",
