--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
+      "@/*": ["./src/*"],
       "resources/*": ["./src/resources/*"]
     },
     "typeRoots": [
@@ -26,6 +27,7 @@
     "resolveJsonModule": true,
     "emitDecoratorMetadata": true
   },
+
   "include": [
     "./src/**/*"
   ],
