--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   "dependencies": {
     "config": "^3.0.1",
     "js-yaml": "^3.12.1",
-    "log4js": "^3.0.6",
-    "tsconfig-paths": "^3.8.0"
+    "log4js": "^3.0.6"
   },
   "devDependencies": {
+    "tsconfig-paths": "^3.8.0",
     "@types/config": "0.0.34",
     "@types/jest": "^23.3.13",
     "@types/js-yaml": "^3.11.4",
